--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "cytoscape": "^3.31.0",
     "react": "^18.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^3.0.1",
