--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "bulma": "^1.0.3",
     "cytoscape": "^3.31.0",
     "react": "^18.2.0",
     "react-cytoscapejs": "^2.0.0",
