--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^3.0.1",
+    "react-world-flags": "^1.6.0",
+    "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
