--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "bulma": "^1.0.3",
     "cytoscape": "^3.31.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
