--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "test-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -9,12 +12,12 @@
     "axios": "^1.7.9",
     "bulma": "^1.0.3",
     "cytoscape": "^3.31.0",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.29.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-world-flags": "^1.6.0",
     "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
